--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+10/18/23: This program has been updated quite a bit. No longer a cgi app, now a standalone command line app.
+The README below is pretty outdated. New one to be written at a later date.
 
  --------------------------------------------------------------------------
  December 6, 2014                                              Version 1.05
